# Goruath

./: Cargo.toml  README.md
doc/: README.md  仕様書  仕様書.md
src/: window.rs
