[package]
name = "Goruath"
version = "0.0.1"
edition = "2024"
description = "test"
license = "MIT"
repository = "https://github.com/ichigo-chameleon/Goruath"
documentation = "https://github.com/ichigo-chameleon/Goruath/blob/master/README.md"
homepage = "https://github.com/ichigo-chameleon/Goruath"


[dependencies]
