[package]
name = "Goruath"
version = "0.0.2"
edition = "2024"
description = "test"
license = "MIT"
repository = "https://github.com/ichigo-chameleon/Goruath"
documentation = "https://github.com/ichigo-chameleon/Goruath/blob/master/README.md"
homepage = "https://github.com/ichigo-chameleon/Goruath"


[dependencies]
winit = "0.30.9"
skia-safe = "0.82.0"