[package]
name = "goruath"
version = "0.0.0"
edition = "2024"
description = "test"
license = "MIT"
repository = "https://github.com/ichigo-chameleon/goruath"
documentation = "https://github.com/ichigo-chameleon/goruath/blob/master/README.md"
homepage = "https://github.com/ichigo-chameleon/goruath"


[dependencies]
winit = "0.30.9"
skia-safe = "0.82.0"